Fixed sidebar column to show below main content on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -66,8 +66,11 @@ $tabs-boxed-link-radius: 6px
   // border: 1px solid black
 
 .columns
-  // flex-direction: column-reverse
   margin-top: 0 !important
+
+#Columns
+  @media only screen and (max-width: $tablet)
+    flex-direction: column-reverse
 
 .column
   div
